test/fail/integration/_fail_grammar_type_func_3.hs
x :: int -> Int
main = print "hello"